[package]
authors = ["Laurentiu Nicola <lnicola@dend.ro>"]
name = "read-temperature"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "1.1"
co2mon = "2.0"
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = [
    "client",
    "http1",
    "http2",
    "stream",
    "tcp",
] }
tokio-serial = "5.4"
tokio-util = "0.6"
tokio = { version = "1.11", features = [
    "fs",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
