[package]
authors = ["Laurentiu Nicola <lnicola@dend.ro>"]
name = "read-temperature"
version = "0.1.0"
edition = "2018"

[dependencies]
bb8 = "0.7"
bb8-postgres = "0.7"
bytes = "1.1"
chrono = "0.4"
co2mon = "2.0"
futures = "0.3"
tokio = { version = "1.11", features = [
    "fs",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-serial = "5.4"
tokio-util = "0.6"
