[package]
authors = ["Laurentiu Nicola <lnicola@dend.ro>"]
name = "read-temperature"
version = "0.1.0"
edition = "2018"

[dependencies]
bb8 = "0.7"
bb8-postgres = "0.7"
bytes = "1.1"
chrono = { version = "0.4", default-features = false }
co2mon = "2.0"
futures-util = { version = "0.3", default-features = false, features = [] }
tokio = { version = "1.11", features = ["rt", "sync", "time"] }
tokio-postgres = { version = "0.7", default-features = false, features = [
    "with-chrono-0_4",
] }
tokio-serial = "5.4"
tokio-util = "0.6"
